--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -123,7 +123,7 @@ body {
   padding: 8px 16px;
   width: 125px;
   height: 40px;
-  background: #4e75ff;
+  background: #092382;
   border: none;
 }
 
